# open-customer-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: oss-first-check.sh
.planning/: MILESTONES.md  PROJECT.md  STATE.md
scripts/: docker-smoke-test.sh
src/opencs/: RESEARCH.md  __init__.py  main.py
tests/: test_e2e_admin_api.py  test_e2e_evolution.py  test_e2e_memory_skills.py  test_e2e_replay.py  test_e2e_tool_execution.py  test_e2e_webchat.py  test_main_factory.py
tests/agents/: test_approval_router.py  test_cs_reply.py  test_llm_client.py  test_orchestrator.py  test_orchestrator_tool_dispatch.py
tests/channel/: test_adapter_base.py  test_capabilities.py  test_exec_token.py  test_registry.py  test_schema.py  test_webchat.py  test_wecom_cs.py
tests/evolution/: test_crm_config_store.py  test_crm_tool_handler.py  test_gate.py  test_hitl_queue.py  test_memory_handler.py  test_persistent_queue.py  test_proposal_store.py  test_shadow_runner.py  test_skill_handler.py  test_types.py
tests/gateway/: test_routes_admin.py  test_routes_replay.py  test_webchat_ws.py  test_wecom_webhook.py
tests/harness/: test_action_guard.py  test_action_plan.py  test_audit_log.py  test_hitl_queue.py  test_token.py
tests/memory/: test_l0_store.py  test_l1_store.py  test_l2_store.py  test_memory_store.py
web-ui/: .gitignore  README.md  RESEARCH.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+125 files in other folders)
