[project]
name = "opencs"
version = "0.1.0"
description = "OpenCS — open-source private-domain customer-service AI platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "wechatpy>=1.8.18,<2",
    "httpx>=0.27,<0.28",
    "anyio>=4.4,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/opencs"]
